kubernetes/qbittorrent/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: qBittorrent
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: qbittorrent.png

spec:
  tls:
  - hosts:
    - qbittorrent.k.oneill.net
    secretName: qbittorrent-tls
  rules:
  - host: qbittorrent.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 8080
